Kubernetes_k3s/navidrome/navidrome-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-ingress
  namespace: navidrome
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: navidrome-default-headers@kubernetescrd
spec:
  tls:
  - hosts:
    - YOUR_NAVIDROME_URL
    secretName: navidrome-tls-cert
  rules:
  - host: YOUR_NAVIDROME_URL
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: navidrome-service # Matches codeserver service name
            port:
              number: 4533 # Matches codeserver service external port
